# rieg_energy

./: AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  README.md  ROADMAP.md  SPECIFICATION.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  hassfest.yml  release.yml
custom_components/rieg_energy/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  sensor.py  services.py  services.yaml  statistics.py  strings.json
custom_components/rieg_energy/translations/: en.json  pt-BR.json
docs/: dashboard.md  development.md  faq.md  installation.md  postgres.md  statistics.md
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_services.py  test_statistics.py
