[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rieg-energy"
version = "0.4.2"
description = "Home Assistant integration for energy monitoring from PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=custom_components.rieg_energy --cov-report=term-missing --cov-report=xml --cov-fail-under=95"

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
plugins = []

[tool.coverage.run]
branch = true
source = ["custom_components/rieg_energy"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
